<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="22dp"
        android:text="@string/about_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/about_gitrepo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:text="@string/about_github"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_gitrepo"
        android:layout_below="@+id/about_gitrepo"
        android:layout_marginTop="26dp"
        android:text="@string/about_email"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_syntax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_email"
        android:layout_below="@+id/about_email"
        android:layout_marginTop="39dp"
        android:text="@string/about_syntax"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_jgit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_syntax"
        android:layout_below="@+id/about_syntax"
        android:layout_marginTop="16dp"
        android:text="@string/about_jgit"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_jgit"
        android:layout_below="@+id/about_jgit"
        android:layout_marginTop="17dp"
        android:text="@string/about_logo"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
