<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".CloneActivity" >

        <EditText
            android:id="@+id/clone_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/edit_repo_name"
            android:inputType="textCapSentences"
            android:paddingRight="30dp"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/clone_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/clone_name"
            android:layout_below="@+id/clone_name"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/clone_address"
            android:inputType="textUri"
            android:paddingRight="30dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/clone_passwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/clone_address"
            android:layout_below="@+id/clone_username"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingRight="12dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/clone_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/clone_passwd"
            android:layout_below="@+id/clone_address"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/username"
            android:paddingRight="12dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/clone_btn_clone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/clone_passwd"
            android:layout_below="@+id/clone_passwd"
            android:layout_marginTop="25dp"
            android:paddingRight="30dp"
            android:text="@string/action_clone" />

        <!-- cleaners -->

        <TextView
            android:id="@+id/clone_clear_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/clone_name"
            android:layout_alignBottom="@+id/clone_name"
            android:layout_alignRight="@+id/clone_name"
            android:layout_marginRight="10dp"
            android:text="@string/x"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#CCCCCC" />

        <TextView
            android:id="@+id/clone_clear_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/clone_address"
            android:layout_alignBottom="@+id/clone_address"
            android:layout_alignRight="@+id/clone_address"
            android:layout_marginRight="10dp"
            android:text="@string/x"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#CCCCCC" />

        <TextView
            android:id="@+id/clone_clear_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/clone_username"
            android:layout_alignBottom="@+id/clone_username"
            android:layout_alignRight="@+id/clone_username"
            android:layout_marginRight="10dp"
            android:text="@string/x"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#CCCCCC" />

        <TextView
            android:id="@+id/clone_clear_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/clone_passwd"
            android:layout_alignBottom="@+id/clone_passwd"
            android:layout_alignRight="@+id/clone_passwd"
            android:layout_marginRight="10dp"
            android:text="@string/x"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#CCCCCC" />

        <Button
            android:id="@+id/clone_delete"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/clone_passwd"
            android:layout_alignTop="@+id/clone_btn_clone"
            android:text="@string/action_delete"
            android:visibility="gone" />
    </RelativeLayout>

</ScrollView>